2005-01-20  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: Set the bounds for nodes properly. They were
	getting screwed up when checkboxes were not enabled, but images
	were.

2005-01-20  Jordi Mas i Hernandez <jordi@ximian.com>

	* ListBox.cs:
		- Owner draw support
		- Fixes		
		
2005-01-20  Jackson Harper  <jackson@ximian.com>

	* XplatUIStructs.cs: More misc keys
	* X11Keyboard.cs: Ignore some control keys.

2005-01-20  Jackson Harper  <jackson@ximian.com>

	* X11Structs.cs: Add the modmaps to the keymask struct and tabify.
	* X11Keyboard.cs: Set the AltGr mask when we get a key event.

2005-01-19  Peter Bartok  <pbartok@novell.com>

	* Control.cs: Un-selecting the control when it is loosing focus

2005-01-19  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: Hook up to the text controls leave event so we can
	end editing when the users clicks outside the text box.
	
2005-01-19  Jackson Harper  <jackson@ximian.com>

	* X11Keyboard.cs: Fix typo that was causing the wrong keycodes to
	get set in the conversion array.

2005-01-19  Peter Bartok  <pbartok@novell.com>

	* Application.cs (ModalRun): Added a call to CreateControl to ensure
	  focus is properly set
	* Button.cs:
	  - Added missing attributes
	  - removed styles, those are already set in the base class
	* ButtonBase.cs:
	  - Added missing attributes
	  - Added clip window styles
	* CheckBox.cs: Added missing attributes
	* CommonDialog.cs: 
	  - FormParentWindow.CreateParams: Added required clip styles
	* Form.cs (ProcessDialogKey): Fixed handling of Escape key, now
	  also filters modifier keys 
	* MessageBox.cs:
	  - Added assignment of Accept and Cancel button to enable Enter 
	    and Esc keys in MessageBox dialogs
	  - FormParentWindow.CreateParams: Added required clip styles
	* RadioButton.cs: Added missing attributes
	* TextControl.cs: No longer draws selection if control does not
	  have focus
	* TextBoxBase.cs: 
	  - Now draws simple rectangle around test area to make it obvious 