@@ -1,5 +1,9 @@
 2005-01-20  Jackson Harper  <jackson@ximian.com>
 
+	* ThemeWin32Classic.cs: Clip text to the staus bar panels rects.
+
+2005-01-20  Jackson Harper  <jackson@ximian.com>
+
 	* TreeView.cs: Set the bounds for nodes properly. They were
 	getting screwed up when checkboxes were not enabled, but images
 	were.
